--- a/episode.html
+++ b/episode.html
@@ -21,29 +21,12 @@
                 <a href="index.html" class="buttons">Home</a>
 
     </div>
-    <div class="main">
-  <div class="image">
-    <img src="images/202627.jpg">
-  </div>
-   <div class="summarey">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam porro aliquid, cupiditate reiciendis provident maxime corrupti eligendi ducimus eum minus assumenda id quam animi non sint dolores quos, ex similique.</p>
-
-   </div>
-     <div class="detailse">
-         <div>
-       <span>Rated :</span> <span>8</span>
-    </div>
-    <div>
-        <span>Rated :</span> <span>8</span>
-     </div>
-     <div>
-        <span>Rated :</span> <span>8</span>
-     </div>
-     </div>
+    <div class="main" id="main">
+  
     </div>
 
 
-
+<div class="form">
     <h3 id="count" style="color: wheat;"></h3>
 
 <select id="select">
@@ -51,6 +34,7 @@
 
 </select>
 <input type="text" id="search" placeholder="Search">
+</div>
  <section class="episodes" id="episodes">
     
  </section>
