--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    <div class="splash" id="spalsh">
+        <img src="images/1488 (1).gif"/>
+    </div>
 
     <div class="navbar">
         <li class="logo"><img
@@ -109,7 +112,6 @@
         <h2>
         </h2>
     </div>
-
     <script src="show.js"></script>
 </body>
 
